--- a/onglink/package.json
+++ b/onglink/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "formik": "^2.4.6",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -18,7 +19,8 @@
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
